--- a/src/container/CreatePost/CreatePost.css
+++ b/src/container/CreatePost/CreatePost.css
@@ -4,6 +4,7 @@
     border: 1px solid grey;
     max-width: 300px;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
 .form-element {
@@ -13,4 +14,29 @@
 .form-element textarea {
     width: 200px;
     height: 70px;
+}
+
+.popupContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
+}
+
+.popupOverlay {
+    position: absolute; 
+    background-color: #CCC; 
+    opacity: 0.5; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%
+}
+.popupContent {
+    position: absolute; 
+    top: 250px; 
+    left: 30%;
+    background-color: white;
+    padding: 30px
 }
