Added login page and dashboard page

--- a/html/styles.css
+++ b/html/styles.css
@@ -20,6 +20,10 @@
 
 }
 
+.signup {
+    margin-left: auto;
+}
+
 .links {
     border: 1px solid white;
     display: flex;
@@ -55,7 +59,7 @@
     width: 900px;
     justify-content: center;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -65,6 +69,38 @@
     border: 1px solid white;
 }
 
+.first-item {
+    order: 1;
+}
+
+.last-item {
+    order: -1;
+}
+
+.social,
+.subscribe {
+    align-self: flex-end;
+    margin-bottom: 20px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item {
+    border: 1px solid #fff;
+    background-color: #D6E9FE;
+    height: 200px;
+    flex: 1;
+}
+
+.footer-one,
+.footer-three {
+    background-color: #5995DA;
+    flex: initial;
+    width: 300px;
+}
 
 /* FACEBOOK */
 .facebook {
